# EffectivePython

./: .gitignore  .gitmodules  .nojekyll  .pre-commit-config.yaml  LICENSE  README.md  _quarto.yml  index.html  index.md  index.qmd  postBuild  pyproject.toml  search.json
.github/workflows/: publish.yml
Chapter_01/: Chapter_01.html  Chapter_01.ipynb  Chapter_01.md  Chapter_01.qmd
Chapter_01/Item_001/: item_001.html  item_001.ipynb  item_001.md  item_001.qmd
Chapter_01/Item_002/: item_002.html  item_002.ipynb  item_002.md  item_002.qmd
Chapter_01/Item_003/: item_003.html  item_003.ipynb  item_003.md  item_003.qmd
Chapter_01/Item_004/: item_004.html  item_004.ipynb  item_004.md  item_004.qmd
Chapter_01/Item_005/: item_005.html  item_005.ipynb  item_005.md  item_005.qmd
Chapter_01/Item_006/: item_006.html  item_006.ipynb  item_006.md  item_006.qmd
Chapter_01/Item_007/: item_007.html  item_007.ipynb  item_007.md  item_007.qmd
Chapter_02/: Chapter_02.html  Chapter_02.ipynb  Chapter_02.md  Chapter_02.qmd
Chapter_03/: Chapter_03.html  Chapter_03.ipynb  Chapter_03.md  Chapter_03.qmd
Chapter_04/: Chapter_04.html  Chapter_04.ipynb  Chapter_04.md  Chapter_04.qmd
Chapter_05/: Chapter_05.html  Chapter_05.ipynb  Chapter_05.md  Chapter_05.qmd
Chapter_06/: Chapter_06.html  Chapter_06.ipynb  Chapter_06.md  Chapter_06.qmd
Chapter_07/: Chapter_07.html  Chapter_07.ipynb  Chapter_07.md  Chapter_07.qmd
Chapter_08/: Chapter_08.html  Chapter_08.ipynb  Chapter_08.md  Chapter_08.qmd
Chapter_09/: Chapter_09.ipynb  Chapter_09.md  Chapter_09.qmd
(+857 files in other folders)
