[project]
name = "effectivepython"
version = "0.1.0"
description = "A collection of examples and notes for Effective Python by Scott Meyer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "pre-commit-uv>=4.2.1",
    "quarto-cli>=1.8.27",
    "ruff>=0.15.6",
    "ty>=0.0.22",
]

[tool.ruff]
extend-exclude = ["*.ipynb", "effectivepython"]

[tool.ty.src]
exclude = ["effectivepython"]
